# apc524_proj

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  testsq.txt
.github/workflows/: ci.yml
data/: datagenerator.py
data/origin/: crypto_data_20241111.csv
examples/: backtest.ipynb
performance/: sharpe.py
pricer/: discount.py
simple_backtester/: __init__.py  app.py  backtest.py  config.py
simple_backtester/performance/: sharpe.py
simple_backtester/preprocess/: dataloader.py  techlib.py
src/simple_backtester/: __init__.py  app.py  backtest.py  config.py  data_protocol.py
src/simple_backtester/data/feature/: return.csv
src/simple_backtester/preprocess/: dataloader.py  source.py  techlib.py  utils.py
src/simple_backtester/templates/: index.html
src/simple_backtester/utils/: tools.py  yaml_helper.py
tests/: test_backtest.py  test_genesis.py  test_sharpe.py  test_strategy.py  test_yaml.py
tests/test_data/: expected_yaml.yaml
tests/test_data/data/ccxt/feature/: ask.csv  bid.csv  close.csv  low.csv  volume.csv
tests/test_data/data/ccxt/origin/: 2022-01-01.csv
tests/test_data/data/local/feature/: close.csv  volume.csv
tests/test_data/feature/: feature1.py  feature1.yaml
tests/test_data/strategy/: strat0.py  strat0.yaml  strat1.py  strat1.yaml  strat2.py  strat2.yaml  strat_CTA_lightgbm.py  strat_CTA_lightgbm.yaml  strat_CTA_mlp.py  strat_CTA_mlp.yaml  strat_LS_ridge.py  strat_LS_ridge.yaml
tests/test_data/yaml/: matrix_sample1.yaml
